src/objects/Vendor_Receiving_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingIdForJournalEntry__c</fullName>
        <label>AccountingIdForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponseForJournalEntry__c</fullName>
        <label>AccountingResponseForJournalEntry</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
    	<fullName>Vendor_Name__c</fullName>
	    <formula>Vendor__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Vendor Name</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Vendor Receiving</description>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalized_VR_Conversion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field hold the value of foreign currency conversion rate with Markup at the time of VR finalized.</description>
        <inlineHelpText>This field hold the value of foreign currency conversion rate with Markup at the time of VR finalized.</inlineHelpText>
        <label>Finalized VR Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalized_VR_Backward_Conversion_Rate__c</fullName>
        <formula>if((ISNULL(Finalized_VR_Conversion_Rate__c) || Finalized_VR_Conversion_Rate__c = 0),1,1/Finalized_VR_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized VR Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Progress_VI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>In Progress VI</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Vendor Receiving Headers</relationshipLabel>
        <relationshipName>Vendor_Receiving_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_VR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy VR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Receiving_From_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Receiving From Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Receiving_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Vendor Receiving Header Owners</relationshipLabel>
        <relationshipName>Vendor_Receiving_Header_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_Number__c</fullName>
        <label>Packing Slip#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <formula>IF( ISNULL(Packing_Slip_Number__c) ||  ISBLANK(Packing_Slip_Number__c)   ,  Name , Packing_Slip_Number__c)</formula>
        <label>Receipt Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_From_Invoice_Total__c</fullName>
        <label>Receiving From Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receiving_Total__c</fullName>
        <label>Receiving Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Stocked</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SyncTokenForJournalEntry__c</fullName>
        <label>SyncTokenForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Receiving Headers</relationshipLabel>
        <relationshipName>Vendor_Receiving_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <description>Used for Vendor receiving header</description>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBJournalEntrySync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBJournalEntrySync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Line_Item__c</fullName>
        <label>Total Line Item</label>
        <summaryForeignKey>Vendor_Receiving_Group__c.Vendor_Receiving_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Received_Qty__c</fullName>
        <label>Total Received Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Vendor Receiving Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Vendor_Receiving</fullName>
        <columns>NAME</columns>
        <columns>Packing_Slip_Number__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBJournalEntrySync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Vendor Receiving</label>
    </listViews>
    <listViews>
        <fullName>Invoiced</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </filters>
        <label>Invoiced</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Vendor_Receiving</fullName>
        <columns>NAME</columns>
        <columns>Receiving_Total__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Vendor Receiving</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>